- Fixed a bug that did not allow portal coordinates to be entered in certain situations
- Added more tooltips to UI elements


_Submitted to App Stores 2022-05-xx_

For more details on this update please visit the "What is New" page in the Apps or on the website
