@@ -1,5 +1,6 @@
 - Fixed a bug that did not allow portal coordinates to be entered in certain situations
 - Added more tooltips to UI elements
+- Add navigation to all Twitch Campaigns page
 
 
 _Submitted to App Stores 2022-05-xx_
